Commit 26/01 : Notebook classification automatique en cours

--- a/berthe_pierrick_4_script_python_122023.ipynb
+++ b/berthe_pierrick_4_script_python_122023.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://user.oc-static.com/upload/2019/02/24/15510259240381_Projet%20textimage%20logo.png\" width=\"600\" height=\"400\">"
+    "<img src=\"https://logo-marque.com/wp-content/uploads/2020/11/Flipkart-Logo.png\" width=\"300\" height=\"200\">"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "source": [
     "# <span style='background:blue'>Introduction</span>\n",
     "\n",
-    "L'entreprise **\"place de marché\"** est une entreprise qui souhaite lancer une\n",
+    "L'entreprise **\"Flipkart\"** est une entreprise indienne qui souhaite lancer une\n",
     "marketplace e-commerce. Sur cette place de marché anglophone, des vendeurs\n",
     "proposent des articles à des acheteurs en postant une photo et une description.\n",
     "Pour rendre l’expérience utilisateur des vendeurs (faciliter la mise en ligne\n",
