COmmit 30/1 mini commit depuis VSC

--- a/berthe_pierrick_3_notebook_classification_122023.ipynb
+++ b/berthe_pierrick_3_notebook_classification_122023.ipynb
@@ -119,7 +119,7 @@
       "\n",
       "Nombre de coeur disponible(s) sur ce PC: 12 coeur(s)\n",
       "\n",
-      "Code lance le : 2024-01-29T16:44:43.635219\n",
+      "Code lance le : 2024-01-30T09:56:29.447509\n",
       "\n"
      ]
     }
@@ -159,7 +159,7 @@
     "from keras.models import Model, Sequential\n",
     "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from plot_keras_history import show_history, plot_history\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
     "# Affichage plot dans le notebook\n",
     "%matplotlib inline\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3236,13 +3236,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def data_flow_fct(data, datagen, batch_size, data_type=None):\n",
+    "def data_flow_fct(data, datagen, batch_size):\n",
     "    \"\"\"\n",
-    "    Crée un générateur de données à partir d'un DataFrame.\n",
+    "    Crée un générateur de données à partir d'un DataFrame :\n",
+    "    - data : DataFrame contenant les chemins des images et les labels\n",
+    "    correspondants.\n",
+    "    - directory : str, facultatif. Chemin du répertoire contenant les images.\n",
+    "    Si vide, les chemins des images doivent être absolus.\n",
+    "    - x_col : str, nom de la colonne contenant les chemins des images.\n",
+    "    - y_col : str, nom de la colonne contenant les labels.\n",
+    "    - weight_col : str, facultatif. Nom de la colonne contenant les poids. Si\n",
+    "    None, tous les poids sont égaux.\n",
+    "    - target_size : tuple, taille des images issues de la data augmentation.\n",
+    "    - classes : list, facultatif. Liste des classes à utiliser. Si None, toutes\n",
+    "    les classes seront automatiquement inférées à partir des labels.\n",
+    "    - class_mode : str, type de label à generer. Si categorical alors les\n",
+    "    labels seront des vecteurs one-hot 2D.\n",
+    "    - batch_size : int, taille des batchs.\n",
+    "    - shuffle : bool, mélanger les données à chaque époch.\n",
+    "    - seed : int, graine pour le mélange des données.\n",
     "\n",
     "    Paramètres :\n",
     "    - data : DataFrame contenant les chemins des images et les labels\n",
@@ -3259,16 +3275,15 @@
     "    data_flow = datagen.flow_from_dataframe(\n",
     "        data,\n",
     "        directory='',\n",
-    "        x_col='image_path',\n",
-    "        y_col='label_name',\n",
+    "        x_col='image',\n",
+    "        y_col='label',\n",
     "        weight_col=None,\n",
-    "        target_size=(256, 256),\n",
+    "        target_size=(224, 224),\n",
     "        classes=None,\n",
     "        class_mode='categorical',\n",
     "        batch_size=batch_size,\n",
     "        shuffle=True,\n",
     "        seed=42,\n",
-    "        subset=data_type\n",
     "    )\n",
     "\n",
     "    return data_flow"
@@ -3276,34 +3291,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 735 validated image filenames belonging to 7 classes.\n",
+      "Found 157 validated image filenames belonging to 7 classes.\n",
+      "Found 158 validated image filenames belonging to 7 classes.\n"
+     ]
+    }
+   ],
    "source": [
+    "# Agglomeration des images et labels\n",
+    "df_train_combined = pd.DataFrame({\"image\": X_train, \"label\": y_train})\n",
+    "df_val_combined = pd.DataFrame({\"image\": X_val, \"label\": y_val})\n",
+    "df_test_combined = pd.DataFrame({\"image\": X_test, \"label\": y_test})\n",
+    "\n",
+    "# Convertir les labels en chaînes de caractères\n",
+    "df_train_combined['label'] = df_train_combined['label'].astype(str)\n",
+    "df_val_combined['label'] = df_val_combined['label'].astype(str)\n",
+    "df_test_combined['label'] = df_test_combined['label'].astype(str)\n",
+    "\n",
     "# Création d'un générateur de données pour les images d'entraînement\n",
     "datagen_train = ImageDataGenerator(\n",
-    "#    featurewise_center=True,\n",
-    "#    featurewise_std_normalization=True,\n",
     "    rotation_range=20,\n",
     "    width_shift_range=0.2,\n",
     "    height_shift_range=0.2,\n",
     "    horizontal_flip=True,\n",
-    "    validation_split=0.25,\n",
     "    preprocessing_function=preprocess_input\n",
     ")\n",
     "\n",
-    "# Application du generateur de donnees sur le jeu d'entrainement et validation\n",
-    "train_flow = data_flow_fct(data, datagen_train, data_type='training')\n",
-    "val_flow = data_flow_fct(data, datagen_train, data_type='validation')\n",
+    "# Application du generateur de donnees sur le jeu d'entrainement\n",
+    "train_flow = data_flow_fct(\n",
+    "    df_train_combined,\n",
+    "    datagen_train,\n",
+    "    batch_size=64,\n",
+    ")\n",
     "\n",
     "# Création générateur de données pour images de test (pas de data augmentation)\n",
-    "datagen_test = ImageDataGenerator(\n",
-    "    validation_split=0,\n",
-    "    preprocessing_function=preprocess_input\n",
+    "datagen_test = ImageDataGenerator(preprocessing_function=preprocess_input)\n",
+    "\n",
+    "# Application du generateur de donnees sur le jeu de test\n",
+    "val_flow = data_flow_fct(\n",
+    "    df_val_combined,\n",
+    "    datagen_test,\n",
+    "    batch_size=64,\n",
     ")\n",
     "\n",
     "# Application du generateur de donnees sur le jeu de test\n",
-    "test_flow = data_flow_fct(data_test, datagen_test, data_type=None)\n",
+    "test_flow = data_flow_fct(\n",
+    "    df_test_combined,\n",
+    "    datagen_test,\n",
+    "    batch_size=64,\n",
+    ")\n",
     "\n",
     "# compute quantities required for featurewise normalization\n",
     "# (std, mean, and principal components if ZCA whitening is applied)\n",
@@ -3394,12 +3437,13 @@
     "\n",
     "        # Entraîner le modèle\n",
     "        history_tf_vgg16_DA = model_tf_vgg16_DA.fit(\n",
-    "            X_train_pretraited,\n",
-    "            y_train_pretraited,\n",
+    "            train_flow,\n",
+    "            steps_per_epoch=len(X_train) // batch_size,\n",
     "            epochs=15,\n",
     "            batch_size=batch_size,\n",
     "            callbacks=callbacks_list,\n",
-    "            validation_data=(X_val_pretraited, y_val_pretraited),\n",
+    "            validation_data=val_flow,\n",
+    "            validation_steps=len(X_val) // batch_size,\n",
     "            verbose=1\n",
     "            )\n",
     "\n",
@@ -3448,7 +3492,7 @@
     "resultat_tf_vgg16_DA['Temps (sec)'] = pd.Series(time_dict)\n",
     "resultat_tf_vgg16_DA['Epochs'] = pd.Series(epoch_dict)\n",
     "\n",
-    "# Affficher le batch_size avec la meilleure accuracy de validation\n",
+    "# Afficher le batch_size avec la meilleure accuracy de validation\n",
     "batch_meilleur_tf_vgg16_DA = resultat_tf_vgg16_DA[\n",
     "    'Validation Accuracy'].idxmax()\n",
     "print(f\"\\nMeilleur batch_size (accuracy): {batch_meilleur_tf_vgg16_DA}\")\n",
@@ -3500,14 +3544,15 @@
     "\n",
     "    # Entraîner le modèle avec batch__meilleur_cnn\n",
     "    history_optimal_tf_vgg16_DA = model_optimal_tf_vgg16_DA.fit(\n",
-    "        X_train_pretraited,\n",
-    "        y_train_pretraited,\n",
+    "        train_flow,\n",
+    "        steps_per_epoch=len(X_train) // batch_size,\n",
     "        epochs=15,\n",
     "        batch_size=batch_meilleur_tf_vgg16_DA,\n",
     "        callbacks=callbacks_list,\n",
-    "        validation_data=(X_val_pretraited, y_val_pretraited),\n",
+    "        validation_data=val_flow,\n",
+    "        validation_steps=len(X_val) // batch_size,\n",
     "        verbose=1\n",
-    "    )"
+    "        )"
    ]
   },
   {
@@ -3614,7 +3659,7 @@
     "# Categorie réelle et prédites des images de validation\n",
     "y_val_num = np.argmax(y_val_pretraited, axis=1)\n",
     "y_val_pred = np.argmax(\n",
-    "    model_optimal_tf_vgg16_DA.predict(X_val_pretraited),\n",
+    "    model_optimal_tf_vgg16_DA.predict(val_flow),\n",
     "    axis=1\n",
     ")\n",
     "\n",
