Commit 02/02 : Notebook classification en l'état avant modif DA avec tuto

--- a/berthe_pierrick_4_script_python_122023.ipynb
+++ b/berthe_pierrick_4_script_python_122023.ipynb
@@ -115,7 +115,7 @@
       "\n",
       "Nombre de coeur disponible(s) sur ce PC: 12 coeur(s)\n",
       "\n",
-      "Code lance le : 2024-01-31T12:57:11.861041\n",
+      "Code lance le : 2024-02-01T09:44:00.242576\n",
       "\n"
      ]
     }
@@ -134,6 +134,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "\n",
+    "# API\n",
+    "import requests\n",
     "\n",
     "# Affichage plot dans le notebook\n",
     "%matplotlib inline\n",
@@ -186,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,69 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "3:80: E501 line too long (91 > 79 characters)\n",
-      "5:27: E231 missing whitespace after ':'\n",
-      "5:42: E231 missing whitespace after ','\n",
-      "5:56: E231 missing whitespace after ':'\n",
-      "5:72: E231 missing whitespace after ','\n",
-      "5:80: E501 line too long (99 > 79 characters)\n",
-      "5:89: E231 missing whitespace after ':'\n",
-      "8:1: W191 indentation contains tabs\n",
-      "9:1: W191 indentation contains tabs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'messages': \"The host you've provided is invalid. If you have difficulties, contact the RapidAPI support team, support@rapidapi.com\"}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import requests\n",
-    "\n",
-    "url = \"https://edamam-food-and-grocery-database.p.rapidapi.com/api/food-database/v2/parser\"\n",
-    "\n",
-    "querystring = {\"health[0]\":\"alcohol-free\",\"category[0]\":\"generic-foods\",\"nutrition-type\":\"cooking\"}\n",
-    "\n",
-    "headers = {\n",
-    "\t\"X-RapidAPI-Key\": \"d579b71ff8msh3474fe4121852b7p1890d7jsn6a1a14d80b18\",\n",
-    "\t\"X-RapidAPI-Host\": \"5520337\"\n",
-    "}\n",
-    "\n",
-    "response = requests.get(url, headers=headers, params=querystring)\n",
-    "\n",
-    "print(response.json())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "test avec YY\n",
-    "Voici les clefs de YY qu'il m'a fournit pour avancer avant d'avoir un compte qui marche"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Il faut trouver :\n",
-    "\n",
-    "foodId, label, category, foodContentsLabel, image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1018,14 +959,29 @@
     }
    ],
    "source": [
+    "# URL de l'API\n",
+    "url = \"https://api.edamam.com/api/food-database/v2/parser\"\n",
+    "\n",
+    "# Clé et ID de l'API\n",
     "API_KEY = 'b52ee0b5d5f28834f1cbedd57ca49692'\n",
     "API_ID = 'f367f20d'\n",
-    "url = \"https://api.edamam.com/api/food-database/v2/parser\"\n",
+    "\n",
+    "# Paramètres de la requête (ingrédient : champagne)\n",
     "querystring = {\"app_key\": API_KEY, \"app_id\": API_ID, \"ingr\": \"champagne\"}\n",
     "results = []\n",
     "\n",
+    "# Requête GET\n",
     "response = requests.request(\"GET\", url, params=querystring).json()\n",
     "display(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il faut trouver :\n",
+    "\n",
+    "foodId, label, category, foodContentsLabel, image"
    ]
   },
   {
