commit 07/02 : juste apres session YY et avant MAJ DA

--- a/berthe_pierrick_1_notebook_faisabilite_feature_extraction_texte_122023.ipynb
+++ b/berthe_pierrick_1_notebook_faisabilite_feature_extraction_texte_122023.ipynb
@@ -20,6 +20,8 @@
    "source": [
     "# <span style='background:white; color:black'>Sommaire</span>\n",
     "\n",
+    "**Introduction**\n",
+    "\n",
     "Importations des librairies<br>\n",
     "\n",
     "Paramètres d'affichage<br>\n",
