Commit 15/02 : mini modif conclusion NB3

--- a/berthe_pierrick_3_notebook_classification_122023.ipynb
+++ b/berthe_pierrick_3_notebook_classification_122023.ipynb
@@ -5302,9 +5302,9 @@
         "id": "WBDzoo1007GX"
       },
       "source": [
-        "Le meilleur modèle pour effectuer la classification d'images supervisée que nous souhaitons réaliser est le **CNN avec Transfer Learning VGG16** couplé avec la **Data Augmentation**. Ce modèle présente les meilleures performances et évite le surapprentissage qui était induit par le même modèle sans la data augmentation.\n",
+        "Le meilleur modèle pour effectuer la classification d'images supervisée que nous souhaitons réaliser est le **CNN avec Transfer Learning VGG16** couplé avec la **Data Augmentation**. Ce modèle présente des performances convenables et évite le surapprentissage qui était induit par le même modèle sans la data augmentation.\n",
         "\n",
-        "Il serait préférable de vérifier que les temps de cacul de ce modèle avec la data augmentation sont acceptables pour l'entreprise **Flipkart** avant de le mettre en production."
+        "Il serait préférable de vérifier que les temps de calcul de ce modèle avec la data augmentation sont acceptables pour l'entreprise **Flipkart** avant de le mettre en production."
       ]
     },
     {
