MAJ nom NB + ajout README

--- a/berthe_pierrick_3_notebook_classification_122023.ipynb
+++ b/berthe_pierrick_3_notebook_classification_122023.ipynb
@@ -16,7 +16,7 @@
         "id": "UPpgnGKh07Fv"
       },
       "source": [
-        "# <span style='color:SteelBlue'>P6 - Classifiez automatiquement des biens de consommation (part 3)</span>"
+        "# <span style='color:SteelBlue'>PB6 - Classifcation automatique de produits (part 3)</span>"
       ]
     },
     {
@@ -5349,7 +5349,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.8"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
