--- a/berthe_pierrick_4_script_python_122023.ipynb
+++ b/berthe_pierrick_4_script_python_122023.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style='color:SteelBlue'>P6 - Classifiez automatiquement des biens de consommation (part 4)</span>"
+    "# <span style='color:SteelBlue'>PB6 - Classifcation automatique de produits (part 4)</span>"
    ]
   },
   {
@@ -1948,7 +1948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
