--- a/berthe_pierrick_1_notebook_faisabilite_feature_extraction_texte_122023.ipynb
+++ b/berthe_pierrick_1_notebook_faisabilite_feature_extraction_texte_122023.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style='color:SteelBlue'>PB6 - Classifcation automatique de produits (part 1)</span>"
+    "# <span style='color:SteelBlue'>PB6 - Classification automatique de produits (part 1)</span>"
    ]
   },
   {
