--- a/berthe_pierrick_3_notebook_classification_122023.ipynb
+++ b/berthe_pierrick_3_notebook_classification_122023.ipynb
@@ -16,7 +16,7 @@
         "id": "UPpgnGKh07Fv"
       },
       "source": [
-        "# <span style='color:SteelBlue'>PB6 - Classifcation automatique de produits (part 3)</span>"
+        "# <span style='color:SteelBlue'>PB6 - Classification automatique de produits (part 3)</span>"
       ]
     },
     {
